--- a/_guides/datastore-elasticsearch-guide.adoc
+++ b/_guides/datastore-elasticsearch-guide.adoc
@@ -18,7 +18,6 @@ include::./attributes.adoc[]
 :sectnumlevels: 4
 
 
-
 Learn how to send {project-name} `Records` into Elasticsearch through de the Datastore API
 
 This guide covers:
@@ -35,6 +34,19 @@ To complete this guide, you need:
 * JDK 1.8+ installed with `JAVA_HOME` configured appropriately
 * Apache Maven 3.5.3+
 * The completed greeter application from the link:getting-started-guide[Getting Started Guide]
+
+
+== Solution
+
+We recommend that you follow the instructions in the next sections and create the application step by step.
+However, you can go right to the completed example.
+
+Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
+
+The solution is located in the `datastore-elasticsearch` directory.
+
+This guide assumes you already have the completed application from the `getting-started` directory.
+
 
 
 == Setup the environment
