--- a/_guides/datastore-solr-guide.adoc
+++ b/_guides/datastore-solr-guide.adoc
@@ -36,6 +36,18 @@ To complete this guide, you need:
 * Apache Maven 3.5.3+
 * The completed greeter application from the link:getting-started-guide[Getting Started Guide]
 
+== Solution
+
+We recommend that you follow the instructions in the next sections and create the application step by step.
+However, you can go right to the completed example.
+
+Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
+
+The solution is located in the `datastore-solr` directory.
+
+This guide assumes you already have the completed application from the `getting-started` directory.
+
+
 
 == Setup the environment
 
