--- a/_guides/getting-started-guide.adoc
+++ b/_guides/getting-started-guide.adoc
@@ -52,38 +52,7 @@ Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {q
 
 The solution is located in the `getting-started` directory.
 
-== Setting up Kafka
-Apache Kafka is pitched as a Distributed Streaming Platform. In Kafka lingo, Producers continuously generate data (streams) and Consumers are responsible for processing, storing and analysing it. Kafka Brokers are responsible for ensuring that in a distributed scenario the data can reach from Producers to Consumers without any inconsistency. A set of Kafka brokers and another piece of software called zookeeper constitute a typical Kafka deployment.
 
-Let’s start with a single broker instance. Create a directory called logisland-getting-started and inside it create your docker-compose.yml with the following content:
-
-[source,yml,subs=attributes+]
-----
-version: '3'
-services:
-  zookeeper:
-    image: wurstmeister/zookeeper
-    ports:
-      - "2181:2181"
-
-  kafka:
-    image: wurstmeister/kafka:0.10.2.1
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_CREATE_TOPICS: "test:1:1"
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-
-  logisland:
-    image: hurence/logisland:latest
-    volumes:
-      - ./conf:/opt/logisland/conf
-----
-
-Start Zookeeper, Kafka and a zombie Logisland container with the following command `docker-compose up -d`
 
 
 == Boostraping Logisland
@@ -92,8 +61,8 @@ Our app is pretty straightforward, it reads some raw apache log lines from a kaf
 
 === Configure the streaming app
 
-The easiest way to create a new {project-name} project is to open a text editor and to edit a config file.
-Paste the following content into a `conf/getting-started.yml`.
+The easiest way to create a new {project-name} project is to open a text editor in the `getting-started` folder and to edit a config file.
+Browse the following content of `conf/parse-apache-logs.yml` in any text editor if you want to make some adjustments.
 
 [source,yml,subs=attributes+]
 ----
@@ -104,9 +73,9 @@ engine:
   component: com.hurence.logisland.engine.spark.KafkaStreamProcessingEngine
   configuration:
     spark.app.name: GettingStarted
-    spark.master: local[2]
-    spark.driver.memory: 1G
-    spark.streaming.batchDuration: 1000
+    spark.master: local[4]
+    spark.driver.memory: 2G
+    spark.streaming.batchDuration: 200
     spark.streaming.kafka.maxRatePerPartition: 3000
     spark.streaming.timeout: -1
     spark.ui.port: 4050
@@ -124,35 +93,89 @@ engine:
         kafka.metadata.broker.list: kafka:9092
         kafka.zookeeper.quorum: zookeeper:2181
         kafka.topic.autoCreate: true
-        kafka.topic.default.partitions: 2
+        kafka.topic.default.partitions: 4
         kafka.topic.default.replicationFactor: 1
       processorConfigurations:
 
+        # a parser that produce events from an apache log REGEX
         - processor: apache_parser
           component: com.hurence.logisland.processor.SplitText
-          type: parser
-          documentation: a parser that produce events from an apache log REGEX
           configuration:
             record.type: apache_log
             value.regex: (\S+)\s+(\S+)\s+(\S+)\s+\[([\w:\/]+\s[+\-]\d{4})\]\s+"(\S+)\s+(\S+)\s*(\S*)"\s+(\S+)\s+(\S+)
             value.fields: src_ip,identd,user,record_time,http_method,http_query,http_version,http_status,bytes_out
-
-
 ----
 
 An Engine is needed to handle the stream processing. This configuration file defines a stream processing job setup.
 The first section configures the Spark engine (we will use a `KafkaStreamProcessingEngine <../plugins.html#kafkastreamprocessingengine>`_) to run in local mode with 2 cpu cores and 2G of RAM.
 
 Inside this engine you will run a Kafka stream of processing, so we setup input/output topics and Kafka/Zookeeper hosts.
-Here the stream will read all the logs sent in ``logisland_raw`` topic and push the processing output into ``logisland_events`` topic.
+Here the stream will read all the logs sent in `logisland_raw` topic and push the processing output into `logisland_events` topic.
 
 We can define some serializers to marshall all records from and to a topic.
 
-=== Launch the application
+== Setting up Underlyning services
+Apache Kafka is pitched as a Distributed Streaming Platform. In Kafka lingo, Producers continuously generate data (streams) and Consumers are responsible for processing, storing and analysing it. Kafka Brokers are responsible for ensuring that in a distributed scenario the data can reach from Producers to Consumers without any inconsistency. A set of Kafka brokers and another piece of software called zookeeper constitute a typical Kafka deployment.
 
-you can now run the job inside the logisland container
+Let’s start with a single broker instance. In the directory directory `getting-started` create your docker-compose.yml with the following content:
 
-`sudo docker exec -ti logisland-getting-started_logisland_1 ./bin/logisland.sh --conf conf/getting-started.yml`
+[source,yml,subs=attributes+]
+----
+version: '3'
+services:
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: wurstmeister/kafka:0.10.2.1
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_CREATE_TOPICS: "test:1:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./data:/tmp/data
+
+  logisland:
+    image: hurence/logisland:latest
+    ports:
+      - '4050:4050'    
+    volumes:
+      - ./conf:/opt/logisland/conf
+    environment:
+      KAFKA_HOME: /opt/kafka_2.11-0.10.2.2
+      KAFKA_BROKERS: kafka:9092
+      ZK_QUORUM: zookeeper:2181
+      REDIS_CONNECTION: redis:6379
+
+  redis:
+    hostname: redis
+    image: 'redis:latest'
+    ports:
+      - '6379:6379'
+    networks:
+      - logisland
+
+volumes:
+  kafka-home:
+
+networks:
+  logisland:
+----
+
+Start Zookeeper, Kafka, Loggen & Logisland container with the following command `docker-compose up -d`
+
+== Launch Logisland Application
+
+Now you can now run the job inside the logisland container
+
+`sudo docker exec -ti getting-started_logisland_1 ./bin/logisland.sh --conf conf/parse-apache-logs.yml`
+
+This will launch a Logisland Stream application waiting for data in a Kafka topic that will be automatically created. 
 
 The last logs should be something like :
 
@@ -182,41 +205,41 @@ log4j:ERROR No output stream or file set for the appender named [rolling].
 
 == Log mining
 
-Now that the plumbing is up and running we'll just send some logs into kafka and see what happens.
+Now that the plumbing is up and running we'll just see what happens.
 
 === Inject some Apache logs into Kafka
 
-Now we're going to send some logs to ``logisland_raw`` Kafka topic to simulate a log collection system.
+Logs are beeing sent to `logisland_raw` Kafka topic to simulate a log collection system. Nothing to do here as it is already done for you by the loggen container which generates random apache logs.
 
-If you don't have your own httpd logs available, you can use some freely available log files from
-NASA-HTTP http://ita.ee.lbl.gov/html/contrib/NASA-HTTP.html web site access:
+[Tip]
+  You could send the first 4000 lines of NASA http access over July 1995 to LogIsland with kafka scripts (available in our logisland container) to `logisland_raw` Kafka topic with the following command :
+  `sudo docker exec -ti getting-started_kafka_1 sh -c "cat /tmp/data/access.log | /opt/kafka/bin/kafka-console-producer.sh --broker-list kafka:9092 --topic logisland_raw"`
 
-- Jul 01 to Jul 31, ASCII format, 20.7 MB gzip compressed ftp://ita.ee.lbl.gov/traces/NASA_access_log_Jul95.gz
-- Aug 04 to Aug 31, ASCII format, 21.8 MB gzip compressed ftp://ita.ee.lbl.gov/traces/NASA_access_logAug95.gz
+If you want to see what is flowing into `logisland_raw` topic, just run the following :
 
-Let's send the first 500 lines of NASA http access over July 1995 to LogIsland with kafka scripts
- (available in our logisland container) to ``logisland_raw`` Kafka topic.
-In another terminal run those commands
+`sudo docker exec -ti getting-started_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_raw`
 
-[source,sh]
+It should something like 
+
+[source,shell]
 ----
-sudo docker exec -ti logisland-getting-started_kafka_1 bash
-cd /tmp
-wget ftp://ita.ee.lbl.gov/traces/NASA_access_log_Jul95.gz
-gunzip NASA_access_log_Jul95.gz
-head -n 500 NASA_access_log_Jul95 | ${KAFKA_HOME}/bin/kafka-console-producer.sh --broker-list kafka:9092 --topic logisland_raw
+68.25.236.19 - - [19/Jun/2019:15:05:36 +0200] "GET /app/main/posts HTTP/1.0" 200 4989 "http://hunter-clark.org/main/faq.php" "Mozilla/5.0 ...
+64.252.158.21 - - [19/Jun/2019:15:05:36 +0200] "POST /search/tag/list HTTP/1.0" 200 5029 "http://lambert.com/" "Mozilla/5.0 ...
+77.185.192.58 - - [19/Jun/2019:15:05:36 +0200] "GET /wp-content HTTP/1.0" 200 4976 "http://simmons.com/" "Mozilla/5.0 ...
+157.242.110.206 - - [19/Jun/2019:15:05:36 +0200] "DELETE /wp-content HTTP/1.0" 200 4913 "http://gonzalez-collins.com/post/" "Mozilla/5.0 ...
 ----
 
 
 === See what we have in return
 
-Logisland will handle the parsing of the log lines and structure them as Records. Those will be sent in another Kafka topic.
+Logisland handles the parsing of the log lines and structure them as Records before sending them to `logisland_events`. Those will be sent in another Kafka topic.
 
-`sudo docker exec -ti logisland-getting-started_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_events --from-beginning`
+`sudo docker exec -ti getting-started_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_events`
 
 
 You should see the apache log events such as : 
 
+[source,shell]
 ----
 {
   "id" : "e80c7088-6676-4b56-9aaf-30cfbe1a4367",
@@ -238,6 +261,18 @@ You should see the apache log events such as :
   }
 }
 ----
+
+
+
+== What's going on behing the scene
+
+You should open the following url http://localhost:4050/streaming/ in your browser to get some metrics from spark streaming throughput.
+
+image:logisland-getting-started.png[Spark Streaming]
+
+The main metric here is the lag or scheduling delay, which one you want to be as low as possible (near zero) or at least no increasing constantly otherwise this would be a sign that you need to make your app scale, it can be by increasing the partitionning of Kafka topics and the number of cores that process simultaneously your data. This is a huge topic.
+
+Another metric is processing time, which give us here about 35ms for 
 
 
 == What's next?
