--- a/_guides/kubernetes1-guide.adoc
+++ b/_guides/kubernetes1-guide.adoc
@@ -38,7 +38,7 @@ However, you can go right to the completed example.
 
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `kube-deploy` directory.
+The solution is located in the `kubernetes1` directory.
 
 
 == Run Logisland stream within Kubernetes 
