--- a/_guides/query-matching-guide.adoc
+++ b/_guides/query-matching-guide.adoc
@@ -18,7 +18,7 @@ include::./attributes.adoc[]
 :sectnumlevels: 4
 
 
-Learn how to percolate lucen Queries to generate custom events based on business policies
+Learn how to percolate lucene Queries to generate custom events based on business policies
 This guide covers:
 
 * lucene syntax
@@ -49,7 +49,7 @@ We recommend that you follow the instructions in the next sections and create th
 However, you can go right to the completed example.
 
 * Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
-* The solution is located in the `query-matching` directory.
+* The solution is located in the `event-processing` directory.
 * This guide assumes you already have the completed application from the `event-aggregation ` directory.
 
 
