--- a/_guides/application-monitoring-guide.adoc
+++ b/_guides/application-monitoring-guide.adoc
@@ -40,7 +40,7 @@ However, you can go right to the completed example.
 
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `application-monitoring` directory.
+The solution is located in the `conf/monitoring` directory.
 
 This guide assumes you already have the completed application from the `getting-started` directory.
 
