--- a/_guides/datastore-connectors-guide.adoc
+++ b/_guides/datastore-connectors-guide.adoc
@@ -28,7 +28,7 @@ However, you can go right to the completed example.
 
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `datastore-connectors` directory.
+The solution is located in the `conf/connectors` directory.
 
 This guide assumes you already have the completed application from the `getting-started` directory.
 
