--- a/_guides/enrichment-guide.adoc
+++ b/_guides/enrichment-guide.adoc
@@ -41,9 +41,9 @@ We recommend that you follow the instructions in the next sections and create th
 However, you can go right to the completed example.
 
 * Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
-* The solution is located in the `enrichment` directory.
+* The solution is located in the `core` directory.
 
-This guide assumes you already have the completed application from the `getting-started` directory.
+This guide assumes you already have the completed application from the `getting-started` guide.
 
 == Apache logs Enrichment
 
