--- a/_guides/event-aggregation-guide.adoc
+++ b/_guides/event-aggregation-guide.adoc
@@ -50,9 +50,9 @@ However, you can go right to the completed example.
 
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `event-processing` directory.
+The solution is located in the `conf/core/event-aggregation.yml` file.
 
-This guide assumes you already have the completed application from the `getting-started` directory.
+This guide assumes you already have the completed application from the `getting-started` guide.
 
 
 == Logisland job setup
@@ -110,7 +110,7 @@ LIMIT 20
 ----    
 
 
-which will consider ``logisland_events`` topic as SQL table and create 20 output Record with the fields avg_bytes_out, src_ip & record_time.
+which will consider `logisland_events` topic as SQL table and create 20 output Record with the fields avg_bytes_out, src_ip & record_time.
 the statement with record_time will ensure that the created Records will correspond to the effective input event time (not the actual time).
 
 
@@ -171,14 +171,14 @@ The result of the query will be pushed into to `logisland_aggregations` topic as
 For this tutorial we will handle some apache logs with a splitText parser and send them to Elastiscearch
 Connect a shell to your logisland container to launch the following streaming jobs.
 
-`sudo docker exec -i -t logisland bin/logisland.sh --conf conf/event-aggregation.yml`
+`sudo docker exec -i -t logisland-quickstarts_logisland_1 bin/logisland.sh --conf conf/core/event-aggregation.yml`
 
 == See what we have in return
 
 Logisland will handle the parsing of the log lines and structure them as Records. Those will be sent in another Kafka topic.
 
-    sudo docker exec -ti logisland-getting-started_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh  \\ 
-        --bootstrap-server kafka:9092 --topic logisland_agregations --from-beginning
+    sudo docker exec -ti logisland-quickstarts_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh  \\ 
+        --bootstrap-server kafka:9092 --topic logisland_agregations
 
 
 You should see the apache log events such as : 
