--- a/_guides/getting-started-guide.adoc
+++ b/_guides/getting-started-guide.adoc
@@ -50,9 +50,7 @@ However, you can go right to the completed example.
 
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `getting-started` directory.
-
-
+The solution is located in the `conf/core/parse-apache-logs.yml` file.
 
 
 == Boostraping Logisland
@@ -61,8 +59,8 @@ Our app is pretty straightforward, it reads some raw apache log lines from a kaf
 
 === Configure the streaming app
 
-The easiest way to create a new {project-name} project is to open a text editor in the `getting-started` folder and to edit a config file.
-Browse the following content of `conf/parse-apache-logs.yml` in any text editor if you want to make some adjustments.
+The easiest way to create a new {project-name} project is to open a text editor in the `conf/core` folder and to edit a config file.
+Edit the following content of `conf/core/parse-apache-logs.yml` in any text editor if you want to make some adjustments.
 
 [source,yml,subs=attributes+]
 ----
@@ -117,7 +115,7 @@ We can define some serializers to marshall all records from and to a topic.
 == Setting up Underlyning services
 Apache Kafka is pitched as a Distributed Streaming Platform. In Kafka lingo, Producers continuously generate data (streams) and Consumers are responsible for processing, storing and analysing it. Kafka Brokers are responsible for ensuring that in a distributed scenario the data can reach from Producers to Consumers without any inconsistency. A set of Kafka brokers and another piece of software called zookeeper constitute a typical Kafka deployment.
 
-Let’s start with a single broker instance. In the directory directory `getting-started` create your docker-compose.yml with the following content:
+Let’s start with a single broker instance. In the `core` directory create your `docker-compose.yml` with the following content:
 
 [source,yml,subs=attributes+]
 ----
@@ -127,6 +125,8 @@ services:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
+    networks:
+      - logisland
 
   kafka:
     image: wurstmeister/kafka:0.10.2.1
@@ -139,9 +139,15 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./data:/tmp/data
+    networks:
+      - logisland
 
   logisland:
     image: hurence/logisland:latest
+    entrypoint: 
+      - "tail"
+      - "-f"
+      - "bin/logisland.sh"
     ports:
       - '4050:4050'    
     volumes:
@@ -151,6 +157,16 @@ services:
       KAFKA_BROKERS: kafka:9092
       ZK_QUORUM: zookeeper:2181
       REDIS_CONNECTION: redis:6379
+    networks:
+      - logisland
+
+  loggen:
+    image: hurence/loggen:latest
+    networks:
+      - logisland
+    environment:
+      LOGGEN_NUM: 500
+      KAFKA_BROKERS: kafka:9092
 
   redis:
     hostname: redis
@@ -173,7 +189,7 @@ Start Zookeeper, Kafka, Loggen & Logisland container with the following command 
 
 Now you can now run the job inside the logisland container
 
-`sudo docker exec -ti getting-started_logisland_1 ./bin/logisland.sh --conf conf/parse-apache-logs.yml`
+`sudo docker exec -ti logisland-quickstarts_logisland_1 ./bin/logisland.sh --conf conf/core/parse-apache-logs.yml`
 
 This will launch a Logisland Stream application waiting for data in a Kafka topic that will be automatically created. 
 
@@ -213,11 +229,11 @@ Logs are beeing sent to `logisland_raw` Kafka topic to simulate a log collection
 
 [Tip]
   You could send the first 4000 lines of NASA http access over July 1995 to LogIsland with kafka scripts (available in our logisland container) to `logisland_raw` Kafka topic with the following command :
-  `sudo docker exec -ti getting-started_kafka_1 sh -c "cat /tmp/data/access.log | /opt/kafka/bin/kafka-console-producer.sh --broker-list kafka:9092 --topic logisland_raw"`
+  `sudo docker exec -ti logisland-quickstarts_kafka_1 sh -c "cat /tmp/data/access.log | /opt/kafka/bin/kafka-console-producer.sh --broker-list kafka:9092 --topic logisland_raw"`
 
 If you want to see what is flowing into `logisland_raw` topic, just run the following :
 
-`sudo docker exec -ti getting-started_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_raw`
+`sudo docker exec -ti logisland-quickstarts_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_raw`
 
 It should something like 
 
@@ -234,7 +250,7 @@ It should something like
 
 Logisland handles the parsing of the log lines and structure them as Records before sending them to `logisland_events`. Those will be sent in another Kafka topic.
 
-`sudo docker exec -ti getting-started_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_events`
+`sudo docker exec -ti logisland-quickstarts_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_events`
 
 
 You should see the apache log events such as : 
@@ -274,6 +290,10 @@ The main metric here is the lag or scheduling delay, which one you want to be as
 
 Another metric is processing time, which give us here about 35ms for 
 
+
+== Stop the solution
+
+Stop Zookeeper, Kafka, Loggen & Logisland container with the following command `docker-compose down`
 
 == What's next?
 
