--- a/_guides/datastore-elasticsearch-guide.adoc
+++ b/_guides/datastore-elasticsearch-guide.adoc
@@ -43,7 +43,7 @@ However, you can go right to the completed example.
 
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `conf/datastore` directory.
+The solution is located in the `conf/datastore/es-write.yml` directory.
 
 This guide assumes you already have the completed application from the `getting-started` directory.
 
@@ -56,97 +56,9 @@ For this guide we need a {project-name} stack (Zookeeper, Kafka, Logisland) and 
 [TIP]
 Please note that you should not launch silmutaneously several docker-compose because we are exposing local port in them. So running several at the same time would be conflicting. So be sure to have killed all your previously launched ({project-name}) containers.
 
-Edit a file named `docker-compose-datastore-es.yml` with the following content : 
-
-[source,dockerfile]
-----
-version: '3'
-services:
-
-  # Zookeeper for Kafka
-  zookeeper:
-    image: hurence/zookeeper
-    hostname: zookeeper
-    ports:
-      - '2181:2181'
-    networks:
-      - logisland
-
-  # A single Kafka broker
-  kafka:
-    image: hurence/kafka:0.10.2.2-scala-2.11
-    hostname: kafka
-    ports:
-      - '9092:9092'
-    volumes:
-      - kafka-home:/opt/kafka_2.11-0.10.2.2/
-    environment:
-      KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_JMX_PORT: 7071
-    networks:
-      - logisland
-
-  # A waiting logisland container
-  logisland:
-    image: hurence/logisland:1.1.2
-    command: tail -f bin/logisland.sh
-    ports:
-      - '4050:4050'
-      - '8082:8082'
-      - '9999:9999'
-    volumes:
-      - kafka-home:/opt/kafka_2.11-0.10.2.2/
-    environment:
-      KAFKA_HOME: /opt/kafka_2.11-0.10.2.2
-      KAFKA_BROKERS: kafka:9092
-      ZK_QUORUM: zookeeper:2181
-      ES_HOSTS: elasticsearch:9200
-      ES_CLUSTER_NAME: es-logisland
-    networks:
-      - logisland
-
-  # ES container
-  # make sure to increase vm.max_map_count kernel setting like documented here :
-  # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html
-  elasticsearch:
-    environment:
-      - ES_JAVA_OPT='-Xms1G -Xmx1G'
-      - cluster.name=es-logisland
-      - http.host=0.0.0.0
-      - transport.host=0.0.0.0
-      - xpack.security.enabled=false
-    hostname: elasticsearch
-    image: 'docker.elastic.co/elasticsearch/elasticsearch:6.6.2'
-    ports:
-      - '9200:9200'
-      - '9300:9300'
-    networks:
-      - logisland
-      - es
-
-  # Kibana for dataviz
-  kibana:
-    environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-    image: 'docker.elastic.co/kibana/kibana:5.4.0'
-    ports:
-      - '5601:5601'
-    networks:
-      - es
-
-volumes:
-  kafka-home:
-
-networks:
-  logisland:
-  es:
-----
-
 Launch your docker containers with this command :
 
-    sudo docker-compose -f docker-compose-datastore-es.yml up -d
+    sudo docker-compose -f docker-compose.yml -f docker-compose-datastore-es.yml up -d
 
 Make sure all containers are running and that there is no error.
 
@@ -191,12 +103,12 @@ engine:
     spark.master: local[2]
   controllerServiceConfigurations:
 
-    - controllerService: elasticsearch_service
-        component: com.hurence.logisland.service.elasticsearch.Elasticsearch_5_4_0_ClientService
-        configuration:
-            hosts: ${ES_HOSTS}
-            cluster.name: ${ES_CLUSTER_NAME}
-            batch.size: 5000
+    - controllerService: datastore_service
+      component: com.hurence.logisland.service.elasticsearch.Elasticsearch_6_6_2_ClientService
+      configuration:
+        hosts: elasticsearch:9300
+        cluster.name: es-logisland
+        batch.size: 500
 ----
 
 As you can see it uses environment variable so make sure to set them. (if you use the docker-compose file of this tutorial it is already done for you).
@@ -227,7 +139,7 @@ Here the stream will read all the logs sent in `logisland_raw` topic and push th
 
 you can now run the job inside the logisland container
 
-    sudo docker exec -ti conf_logisland_1 ./bin/logisland.sh --conf ./conf/index-apache-logs-es.yml
+    sudo docker exec -ti logisland-quickstarts_logisland_1 ./bin/logisland.sh --conf ./conf/datastore/es-write.yml
 
 
 
@@ -258,7 +170,7 @@ image::kibana-apache-logs.png[]
 You can Ctr+c the console where you launched logisland job.
 Then to kill all containers used run :
 
-    sudo docker-compose -f docker-compose-datastore-es.yml down
+    sudo docker-compose down
 
 Make sure all container have disappeared.
 
